default/objects/LongForm_Page__c/LongForm_Page__c.object-meta.xml
<CustomObject>
    <label>LongForm Page</label>
    <nameField>
        <label>LongForm Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LongForm Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>