default/objects/LongForm_Page__c/fields/Long_Form__c.field-meta.xml
<CustomField>
    <fullName>Long_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Long Form</label>
    <referenceTo>LongForm__c</referenceTo>
    <relationshipName>Long_Form_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>