default/objects/LongForm_Page__c/fields/LongForm_Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>LongForm_Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LongForm Menu Item</label>
    <referenceTo>LongForm_Menu_Item__c</referenceTo>
    <relationshipLabel>LongForm Pages</relationshipLabel>
    <relationshipName>LongForm_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>