default/objects/LongForm_Page__c/fields/System_Error__c.field-meta.xml
<CustomField>
    <fullName>System_Error__c</fullName>
    <label>System Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>