default/objects/LongForm_Page__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Lightbox</fullName>
            </value>
            <value>
                <fullName>Inline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>